# todays-cpp-scratch-engine

./: Cross-platform-Build-Setup-RTS-Engine.txt  README.md  build_mesa_again2.txt  git_push_engine_tutorial1_startup.txt  vulkan-mesa3d_imgui_notes.txt
src/game/client/: CMakeLists.txt  cl_dll_intmain.cpp
src/launcher/: CMakeLists.txt  launcher.ini  main.cpp
